# fontawesome-qml

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO
include/: fontawesome-qml.h
maintenance/: font-awsome-code-generator.py
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/FontAwesomeHashExample/: CMakeLists.txt  main.cpp  main.qml
src/lib/: CMakeLists.txt  FontAweSomeQmlConfig.cmake.in  fabase.cpp  fabase.h  fontawesome_qml.cpp  fontawesome_qml.qrc  fontawesomehash.cpp  fontawesomehash.h
src/lib/js/: fa-helper.js  fa.js
src/lib/qml/: Fontawesome.qml  FontawesomeModel.qml
src/lib/qml/FontAwesomeModelQml/: FontawesomeModel.qml  qmldir
src/lib/qml/FontAwesomeQml/: Fontawesome.qml  qmldir
src/viewer/: CMakeLists.txt  fontawesome-qml-viewer.qrc  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
src/viewer/qml/: FaFilter.qml  main.qml
